implemented verification based hotel management system
