# controller/hotelController.js
@@ -1,20 +1,19 @@
 const HotelError = require("../error/authError");
 const hotelService = require("../service/hotelService");
 const { errorHandler } = require("../controller/authController");
-const authService = require("../service/authService");
-const AuthError = require("../error/authError");
-const helperService = require("../service/helperService");
 
 const newHotelListing = async function (req, res, next) {
   try {
-    const { name, description, location, address, user, totalRooms } = req.body;
+    const loggedINUser = req.loggedInUser;
+    // console.log(User);
+    const { name, description, location, address, totalRooms } = req.body;
     let id = await hotelService.addHoteltoDB({
       name,
       description,
       location,
       address,
-      user,
       totalRooms,
+      loggedINUser,
     });
     res
       .status(201)
@@ -53,16 +52,20 @@ function parseDateString(dateString) {
 
 const hotelBooking = async function (req, res, next) {
   try {
+    const loggedINUser = req.loggedInUser;
     const {
       hotel,
-      user,
       checkInDate,
       checkOutDate,
       numGuests,
       rooms,
-      totalPrice,
       paymentStatus,
     } = req.body;
+    if (rooms <= 0 || !rooms)
+      throw new HotelError(
+        `please select a valid rooms can't book ${rooms} rooms`,
+        400
+      );
     const checkIn = new Date(parseDateString(checkInDate));
     const checkOut = new Date(parseDateString(checkOutDate));
     if (!(checkIn >= Date.now()))
@@ -71,15 +74,14 @@ const hotelBooking = async function (req, res, next) {
       throw new HotelError("Check-in date must be before check-out date", 400);
     let result = await hotelService.addBooking({
       hotel,
-      user,
       checkInDate,
       checkOutDate,
       numGuests,
       rooms,
-      totalPrice,
       paymentStatus,
+      loggedINUser,
     });
-    await hotelService.sendMessageViaMail(user, hotel, totalPrice);
+    await hotelService.sendMessageViaMail(result, loggedINUser._id, hotel);
     res.status(201).send({ message: `succesfully booked ${result}` });
   } catch (err) {
     errorHandler(err, next);
@@ -88,8 +90,9 @@ const hotelBooking = async function (req, res, next) {
 
 const hotelReview = async function (req, res, next) {
   try {
+    const user = req.loggedInUser;
     const hotelId = req.params.hotelId;
-    const userId = req.params.userId;
+    const userId = user._id;
     const { review, rating } = req.body;
     let result = await hotelService.addReviewtoHotel(
       hotelId,
@@ -105,8 +108,9 @@ const hotelReview = async function (req, res, next) {
 
 const deactivateHotel = async function (req, res, next) {
   try {
+    const user = req.loggedInUser;
     const hotelId = req.params.hotelId;
-    const userId = req.params.userId;
+    const userId = user._id;
     await hotelService.deactivateHotelToDB(hotelId, userId);
     res.status(200).send({ message: "Hotel succesfully Deactivated" });
   } catch (err) {
@@ -116,20 +120,14 @@ const deactivateHotel = async function (req, res, next) {
 
 const updateHotel = async function (req, res, next) {
   try {
-    const {
-      hotelId,
-      userId,
-      name,
-      description,
-      location,
-      address,
-      totalRooms,
-    } = req.body;
-    if (!(hotelId && userId))
-      throw new AuthError("please Provide Hotelid and userid", 401);
+    const user = req.loggedInUser;
+    const { hotelId, name, description, location, address, totalRooms } =
+      req.body;
+    // if (!(hotelId && userId))
+    //   throw new AuthError("please Provide Hotelid and userid", 401);
     await hotelService.updateHotelToDB({
       hotelId,
-      userId,
+      userId: user._id,
       name,
       description,
       location,
@@ -144,8 +142,10 @@ const updateHotel = async function (req, res, next) {
 
 const cancelBooking = async function (req, res, next) {
   try {
+    const user = req.loggedInUser;
     const bookingId = req.params.bookingId;
-    const { hotelId, userId } = req.body;
+    const { hotelId } = req.body;
+    const userId = user._id;
     await hotelService.cancelBookingToDb(bookingId, hotelId, userId);
     res.status(200).send({ message: "Booking Succesfully Cancelled" });
   } catch (err) {
@@ -155,7 +155,8 @@ const cancelBooking = async function (req, res, next) {
 
 const getAllBookings = async function (req, res, next) {
   try {
-    const userId = req.params.userId;
+    const user = req.loggedInUser;
+    const userId = user._id;
     console.log(userId);
     let result = await hotelService.getAllBookingsFromDb(userId);
     res.status(200).send(result);
