# utils/swagger.json
@@ -1,5 +1,5 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "title": "User Authentication",
     "description": "User Authentication Endpoints",
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "https://hotel-management-gf0g.onrender.com/"
+      "url": "http://localhost:3200/"
     }
   ],
   "schemes": ["http", "https"],
@@ -66,6 +66,33 @@
         }
       }
     },
+    "/user/verify/mobile/otp": {
+      "post": {
+        "tags": ["auth"],
+        "summary": "verify user mobile using otp",
+        "parameters": [
+          {
+            "name": "user inputs",
+            "in": "body",
+            "description": "verify mobile via otp",
+            "schema": {
+              "$ref": "#/definitions/userMobileVerificationOtp"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/user/verify/email": {
       "post": {
         "tags": ["auth"],
@@ -93,17 +120,17 @@
         }
       }
     },
-    "/user/verify/otp": {
+    "/user/verify/email/otp": {
       "post": {
         "tags": ["auth"],
-        "summary": "verify user mobile using otp",
+        "summary": "verify user email using otp",
         "parameters": [
           {
             "name": "user inputs",
             "in": "body",
-            "description": "verify mobile via otp",
+            "description": "verify email via otp",
             "schema": {
-              "$ref": "#/definitions/userMobileVerificationOtp"
+              "$ref": "#/definitions/userEmailVerificationOtp"
             }
           }
         ],
@@ -116,6 +143,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "401": {
+            "description": "Unauthorised Access"
           }
         }
       }
@@ -151,12 +181,9 @@
       "post": {
         "tags": ["auth"],
         "summary": "user login via token",
-        "parameters": [
+        "security": [
           {
-            "name": "Authorization",
-            "in": "header",
-            "required": "true",
-            "description": "Bearer token"
+            "bearerAuth": []
           }
         ],
         "responses": {
@@ -176,12 +203,9 @@
       "post": {
         "tags": ["auth"],
         "summary": "user logout via token",
-        "parameters": [
+        "security": [
           {
-            "name": "Authorization",
-            "in": "header",
-            "required": "true",
-            "description": "Bearer token"
+            "bearerAuth": []
           }
         ],
         "responses": {
@@ -197,16 +221,13 @@
         }
       }
     },
-    "/user/getuser/{userid}": {
+    "/user/getuser": {
       "get": {
         "tags": ["auth"],
         "summary": "get user by id",
-        "parameters": [
+        "security": [
           {
-            "name": "userid",
-            "in": "path",
-            "required": "true",
-            "description": "User Id"
+            "bearerAuth": []
           }
         ],
         "responses": {
@@ -226,6 +247,11 @@
       "post": {
         "tags": ["Hotel Management"],
         "summary": "New Hotel Listing",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "user inputs",
@@ -296,6 +322,11 @@
       "post": {
         "tags": ["Hotel Management"],
         "summary": "Create Hotel Booking",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "Hotel Booking",
@@ -320,19 +351,13 @@
         }
       }
     },
-    "/hotel/getAllBookings/{userId}": {
+    "/hotel/getAllBookings": {
       "get": {
         "tags": ["Hotel Management"],
         "summary": "Get All Bookings",
-        "parameters": [
+        "security": [
           {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of the user",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "bearerAuth": []
           }
         ],
         "responses": {
@@ -348,10 +373,15 @@
         }
       }
     },
-    "/hotel/review/{hotelId}/{userId}": {
+    "/hotel/review/{hotelId}": {
       "post": {
         "tags": ["Hotel Management"],
         "summary": "Add Hotel Review",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "hotelId",
@@ -359,12 +389,7 @@
             "description": "ID of the hotel",
             "required": true
           },
-          {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of the user",
-            "required": true
-          },
+
           {
             "name": "Add Hotel Review",
             "in": "body",
@@ -392,6 +417,11 @@
       "patch": {
         "tags": ["Hotel Management"],
         "summary": "Update Hotel",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "update Hotel",
@@ -415,24 +445,20 @@
         }
       }
     },
-    "/hotel/delete/{hotelId}/{userId}": {
+    "/hotel/delete/{hotelId}": {
       "delete": {
         "tags": ["Hotel Management"],
         "summary": "Delete Hotel",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "hotelId",
             "in": "path",
             "description": "ID of the hotel",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of the user",
             "required": true,
             "schema": {
               "type": "string"
@@ -456,6 +482,11 @@
       "post": {
         "tags": ["Hotel Management"],
         "summary": "Cancel Hotel Booking",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "bookingId",
@@ -487,6 +518,17 @@
             "description": "Not Found"
           }
         }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "apiKey",
+        "name": "Authorization",
+        "scheme": "bearer",
+        "bearerFormat": "JWT",
+        "in": "header"
       }
     }
   },
@@ -540,6 +582,18 @@
         }
       }
     },
+    "userEmailVerificationOtp": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "otp": {
+          "type": "integer",
+          "format": "numeric"
+        }
+      }
+    },
 
     "userLogin": {
       "type": "object",
@@ -567,9 +621,6 @@
         "address": {
           "type": "string"
         },
-        "user": {
-          "type": "string"
-        },
         "totalRooms": {
           "type": "number"
         }
@@ -579,9 +630,6 @@
       "type": "object",
       "properties": {
         "hotel": {
-          "type": "string"
-        },
-        "user": {
           "type": "string"
         },
         "checkInDate": {
@@ -594,9 +642,6 @@
           "type": "number"
         },
         "rooms": {
-          "type": "number"
-        },
-        "totalPrice": {
           "type": "number"
         },
         "paymentStatus": {
@@ -621,10 +666,6 @@
         "hotelId": {
           "type": "string",
           "description": "ID of the hotel"
-        },
-        "userId": {
-          "type": "string",
-          "description": "ID of the user"
         },
         "name": {
           "type": "string",
@@ -654,10 +695,6 @@
         "hotelId": {
           "type": "string",
           "description": "ID of the hotel"
-        },
-        "userId": {
-          "type": "string",
-          "description": "ID of the user"
         }
       }
     }
